[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/all_boss/boss3/boss3.gd" type="Script" id=1]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve1.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve2.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve4.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve3.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve8.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve7.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve6.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve5.png" type="Texture" id=9]
[ext_resource path="res://scenes/all_boss/boss3/spawner_cube.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/inimigos/all_boss/boss03/boss_neve9.png" type="Texture" id=11]
[ext_resource path="res://scenes/all_boss/boss3/caixa_de_gelo_boss.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 11 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_shot"
} ]
}

[sub_resource type="Animation" id=2]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "sleeping"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 15.3744

[sub_resource type="Animation" id=6]
resource_name = "bullet"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_esq:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 60, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("bullet_esq/caixa_de_gelo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("bullet_esq/caixa_de_gelo2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("bullet_esq/caixa_de_gelo3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("bullet_esq/caixa_de_gelo4")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("bullet_dir:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( -75, 10 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("bullet_dir/caixa_de_gelo5")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("bullet_dir/caixa_de_gelo6")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("bullet_dir/caixa_de_gelo7")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("bullet_dir/caixa_de_gelo8")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparando"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "recue"
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_esq:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("bullet_esq/caixa_de_gelo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("bullet_esq/caixa_de_gelo2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("bullet_esq/caixa_de_gelo3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("bullet_esq/caixa_de_gelo4")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("bullet_dir:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("bullet_dir/caixa_de_gelo5")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("bullet_dir/caixa_de_gelo6")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("bullet_dir/caixa_de_gelo7")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("bullet_dir/caixa_de_gelo8")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_disparando"
} ]
}

[node name="boss3" type="KinematicBody2D"]
position = Vector2( 86, 248 )
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 11 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/balance = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/sleeping = SubResource( 4 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="esq" type="Position2D" parent="."]
position = Vector2( -37.8323, -27.1568 )

[node name="dir" type="Position2D" parent="."]
position = Vector2( 40.0797, -27.3441 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="spawner_cube" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -302.642 )

[node name="bullet_esq" type="Node2D" parent="."]

[node name="caixa_de_gelo" parent="bullet_esq" instance=ExtResource( 13 )]
position = Vector2( -155.112, -225.244 )
rotation = 3.14159
z_index = 5

[node name="caixa_de_gelo2" parent="bullet_esq" instance=ExtResource( 13 )]
position = Vector2( -154.716, -167.701 )
rotation = 3.14159
z_index = 5

[node name="caixa_de_gelo3" parent="bullet_esq" instance=ExtResource( 13 )]
position = Vector2( -154.716, -104.772 )
rotation = 3.14159
z_index = 5

[node name="caixa_de_gelo4" parent="bullet_esq" instance=ExtResource( 13 )]
position = Vector2( -153.966, -40.7192 )
rotation = 3.14159
z_index = 5

[node name="bullet_dir" type="Node2D" parent="."]
position = Vector2( 0, 10 )

[node name="caixa_de_gelo5" parent="bullet_dir" instance=ExtResource( 13 )]
position = Vector2( 150, -225.244 )
z_index = 5

[node name="caixa_de_gelo6" parent="bullet_dir" instance=ExtResource( 13 )]
position = Vector2( 150, -167.701 )
z_index = 5

[node name="caixa_de_gelo7" parent="bullet_dir" instance=ExtResource( 13 )]
position = Vector2( 150, -104.772 )
z_index = 5

[node name="caixa_de_gelo8" parent="bullet_dir" instance=ExtResource( 13 )]
position = Vector2( 150, -40.7192 )
z_index = 5

[node name="bullets" type="AnimationPlayer" parent="."]
anims/bullet = SubResource( 6 )
anims/recue = SubResource( 7 )

[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
